--- a/src/resource.qrc
+++ b/src/resource.qrc
@@ -49,6 +49,16 @@
         <file>../Images/4-Courriel/Free.svg</file>
         <file>../Images/4-Courriel/Bouygues.svg</file>
         <file>../Images/4-Courriel/LaPoste.svg</file>
+        <file>../Images/Heficience_Icone.iconset/icon_16x16.png</file>
+        <file>../Images/Heficience_Icone.iconset/icon_16x16@2x.png</file>
+        <file>../Images/Heficience_Icone.iconset/icon_32x32.png</file>
+        <file>../Images/Heficience_Icone.iconset/icon_32x32@2x.png</file>
+        <file>../Images/Heficience_Icone.iconset/icon_128x128.png</file>
+        <file>../Images/Heficience_Icone.iconset/icon_128x128@2x.png</file>
+        <file>../Images/Heficience_Icone.iconset/icon_256x256.png</file>
+        <file>../Images/Heficience_Icone.iconset/icon_256x256@2x.png</file>
+        <file>../Images/Heficience_Icone.iconset/icon_512x512.png</file>
+        <file>../Images/Heficience_Icone.iconset/icon_512x512@2x.png</file>
         <file>../Calculator/scripts/script.js</file>
         <file>../Calculator/styles/dark.css</file>
         <file>../Calculator/styles/light.css</file>
